data/derived/sp14/progs/unify/prog4313.ml.out
Characters 44-50:
  let fixpoint (f,b) = wwhile(if f b = b then f b, b);;
                                              ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
